--- a/Análise_de_dados.ipynb
+++ b/Análise_de_dados.ipynb
@@ -427,14 +427,14 @@
       ],
       "source": [
         "# Informações básicas sobre o dataset kidsfeet\n",
-        "print(f'Dataset possui {casas.shape[0]} registros e {casas.shape[1]} colunas')\n",
-        "print(f'Colunas: {list(casas.columns)}')\n",
+        "print(f'Dataset possui {kids.shape[0]} registros e {kids.shape[1]} colunas')\n",
+        "print(f'Colunas: {list(kids.columns)}')\n",
         "\n",
         "# Tipos de dados e estatísticas básicas\n",
         "print('\\nTipos de dados:')\n",
-        "print(casas.dtypes)\n",
+        "print(kids.dtypes)\n",
         "print('\\nPrimeiras 5 linhas:')\n",
-        "casas.head()"
+        "kids.head()"
       ]
     },
     {
@@ -496,7 +496,7 @@
         "\n",
         "# Gráfico de barras: distribuição por sexo\n",
         "plt.subplot(1,3,1)\n",
-        "sexo_counts = casas['Sexo'].value_counts()\n",
+        "sexo_counts = kids['Sexo'].value_counts()\n",
         "sns.barplot(x=sexo_counts.index, y=sexo_counts.values, palette='viridis')\n",
         "plt.title('Distribuição por Sexo', fontsize=12, fontweight='bold')\n",
         "plt.xlabel('Sexo (B=Menino, G=Menina)')\n",
@@ -504,7 +504,7 @@
         "\n",
         "# Gráfico de barras: distribuição por pé (Pe)\n",
         "plt.subplot(1,3,2)\n",
-        "pe_counts = casas['Pe'].value_counts()\n",
+        "pe_counts = kids['Pe'].value_counts()\n",
         "sns.barplot(x=pe_counts.index, y=pe_counts.values, palette='magma')\n",
         "plt.title('Distribuição por Pé', fontsize=12, fontweight='bold')\n",
         "plt.xlabel('Pé Medido (L=Esquerdo, R=Direito)')\n",
@@ -512,7 +512,7 @@
         "\n",
         "# Gráfico de barras: distribuição por ano de nascimento\n",
         "plt.subplot(1,3,3)\n",
-        "ano_counts = casas['AnoNascimento'].value_counts().sort_index()\n",
+        "ano_counts = kids['AnoNascimento'].value_counts().sort_index()\n",
         "sns.barplot(x=ano_counts.index.astype(str), y=ano_counts.values, palette='plasma')\n",
         "plt.title('Distribuição por Ano de Nascimento', fontsize=12, fontweight='bold')\n",
         "plt.xlabel('Ano')\n",
@@ -569,13 +569,13 @@
         "plt.figure(figsize=(12,5))\n",
         "\n",
         "plt.subplot(1,2,1)\n",
-        "sns.histplot(data=casas, x='Comprimento', bins=8, kde=True, color='skyblue')\n",
+        "sns.histplot(data=kids, x='Comprimento', bins=8, kde=True, color='skyblue')\n",
         "plt.title('Distribuição do Comprimento', fontsize=12, fontweight='bold')\n",
         "plt.xlabel('Comprimento (cm)')\n",
         "plt.ylabel('Frequência')\n",
         "\n",
         "plt.subplot(1,2,2)\n",
-        "sns.histplot(data=casas, x='Largura', bins=8, kde=True, color='salmon')\n",
+        "sns.histplot(data=kids, x='Largura', bins=8, kde=True, color='salmon')\n",
         "plt.title('Distribuição da Largura', fontsize=12, fontweight='bold')\n",
         "plt.xlabel('Largura (cm)')\n",
         "plt.ylabel('Frequência')\n",
@@ -660,19 +660,19 @@
         "\n",
         "# Boxplot geral de Comprimento\n",
         "plt.subplot(1,3,1)\n",
-        "sns.boxplot(y=casas['Comprimento'], color='lightblue')\n",
+        "sns.boxplot(y=kids['Comprimento'], color='lightblue')\n",
         "plt.title('Boxplot Comprimento (geral)')\n",
         "plt.ylabel('Comprimento (cm)')\n",
         "\n",
         "# Boxplot geral de Largura\n",
         "plt.subplot(1,3,2)\n",
-        "sns.boxplot(y=casas['Largura'], color='lightcoral')\n",
+        "sns.boxplot(y=kids['Largura'], color='lightcoral')\n",
         "plt.title('Boxplot Largura (geral)')\n",
         "plt.ylabel('Largura (cm)')\n",
         "\n",
         "# Boxplot Comprimento por Sexo\n",
         "plt.subplot(1,3,3)\n",
-        "sns.boxplot(data=casas, x='Sexo', y='Comprimento', palette='viridis')\n",
+        "sns.boxplot(data=kids, x='Sexo', y='Comprimento', palette='viridis')\n",
         "plt.title('Comprimento por Sexo')\n",
         "plt.xlabel('Sexo (B=Menino, G=Menina)')\n",
         "plt.ylabel('Comprimento (cm)')\n",
@@ -725,7 +725,7 @@
         "import seaborn as sns\n",
         "\n",
         "plt.figure(figsize=(8, 5))\n",
-        "month_counts = casas['MesNascimento'].value_counts().sort_index()\n",
+        "month_counts = kids['MesNascimento'].value_counts().sort_index()\n",
         "sns.barplot(x=month_counts.index, y=month_counts.values, palette='plasma')\n",
         "plt.title('Distribuição por Mês de Nascimento', fontsize=14, fontweight='bold')\n",
         "plt.xlabel('Mês')\n",
@@ -999,8 +999,8 @@
       ],
       "source": [
         "# Variância e relação com desvio padrão (Comprimento)\n",
-        "variancia_comp = casas['Comprimento'].var()\n",
-        "desvio_comp = casas['Comprimento'].std()\n",
+        "variancia_comp = kids['Comprimento'].var()\n",
+        "desvio_comp = kids['Comprimento'].std()\n",
         "print(f\"pandas.var(): {variancia_comp:.4f} cm²\")\n",
         "print(f\"pandas.std(): {desvio_comp:.4f} cm\")\n",
         "print(f\"Relação: std² = ({desvio_comp:.4f})² = {desvio_comp**2:.4f} ≈ var\")"
@@ -1159,11 +1159,11 @@
       ],
       "source": [
         "# Visualização: Média vs Mediana de Comprimento (gráfico)\n",
-        "media = casas['Comprimento'].mean()\n",
-        "mediana = casas['Comprimento'].median()\n",
+        "media = kids['Comprimento'].mean()\n",
+        "mediana = kids['Comprimento'].median()\n",
         "\n",
         "plt.figure(figsize=(10, 5))\n",
-        "sns.histplot(data=casas, x='Comprimento', bins=10, alpha=0.7, color='cyan')\n",
+        "sns.histplot(data=kids, x='Comprimento', bins=10, alpha=0.7, color='cyan')\n",
         "plt.axvline(media, color='red', linestyle='--', linewidth=2, label=f'Média: {media:.2f} cm')\n",
         "plt.axvline(mediana, color='green', linestyle='-', linewidth=2, label=f'Mediana: {mediana:.2f} cm')\n",
         "plt.title('Distribuição de Comprimento: Média vs Mediana')\n",
@@ -1212,8 +1212,8 @@
       ],
       "source": [
         "# Calculando média e mediana de Largura\n",
-        "media_l = casas['Largura'].mean()\n",
-        "mediana_l = casas['Largura'].median()\n",
+        "media_l = kids['Largura'].mean()\n",
+        "mediana_l = kids['Largura'].median()\n",
         "print(f\"Média de Largura: {media_l:.2f} cm\")\n",
         "print(f\"Mediana de Largura: {mediana_l:.2f} cm\")\n",
         "print(f\"Diferença: {abs(media_l - mediana_l):.2f} cm\")"
@@ -1268,30 +1268,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 356
         },
         "id": "aha3WinF3thZ",
-        "outputId": "5d1dfeff-6b71-4b42-cb9e-f1da6d6e492b"
+        "outputId": "91ca9dce-8824-4ed5-a456-1c7d017be24e"
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Dataset kidsfeet disponível com 39 linhas.\n"
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: 'kidsfeet.dat.txt'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1220362446.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcolunas_kids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"MesNascimento\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"AnoNascimento\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Comprimento\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Largura\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Sexo\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Pe\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"DominanciaMao\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;34m'casas'\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mglobals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m'Comprimento'\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkids\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mcasas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'kidsfeet.dat.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34mr'\\s+'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcolunas_kids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mpes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcasas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[1;32m   1024\u001b[0m     \u001b[0mkwds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwds_defaults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1025\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1026\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1027\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1028\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    618\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    619\u001b[0m     \u001b[0;31m# Create the parser.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 620\u001b[0;31m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    621\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    622\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m   1618\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1619\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhandles\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mIOHandles\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1620\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1621\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1622\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[0;34m(self, f, engine)\u001b[0m\n\u001b[1;32m   1878\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0;34m\"b\"\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1879\u001b[0m                     \u001b[0mmode\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\"b\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1880\u001b[0;31m             self.handles = get_handle(\n\u001b[0m\u001b[1;32m   1881\u001b[0m                 \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1882\u001b[0m                 \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/common.py\u001b[0m in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    871\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencoding\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m\"b\"\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    872\u001b[0m             \u001b[0;31m# Encoding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 873\u001b[0;31m             handle = open(\n\u001b[0m\u001b[1;32m    874\u001b[0m                 \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    875\u001b[0m                 \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'kidsfeet.dat.txt'"
           ]
         }
       ],
       "source": [
-        "# Carregando dataset kidsfeet local (caso ainda não esteja carregado em 'casas')\n",
-        "colunas_kids = [\"MesNascimento\", \"AnoNascimento\", \"Comprimento\", \"Largura\", \"Sexo\", \"Pe\", \"DominanciaMao\"]\n",
-        "if 'casas' not in globals() or 'Comprimento' not in casas.columns:\n",
-        "    casas = pd.read_csv('kidsfeet.dat.txt', sep=r'\\s+', header=None, names=colunas_kids)\n",
-        "\n",
-        "pes = casas.copy()\n",
+        "pes = kids.copy()\n",
         "print('Dataset kidsfeet disponível com', len(pes), 'linhas.')"
       ]
     },
